--- a/emails.html
+++ b/emails.html
@@ -16,7 +16,7 @@
         </div><br>
         <label for="senha">senha;</label>
         <input type="senha" id="senha" name="senha" required><br>
-        <button type="submit"> <a href="index.html">logar</a></button>
+        <button type="submit"> <a href="princip.html">logar</a></button>
     </form>
 
     <script>
